feat: support Java 8 through 21
Keep the regular executable JAR Java 8-compatible, isolate Java 21 module descriptors for the optional jlink image, and test Linux, macOS, and Windows across JDK 8, 11, and 21.