@@ -17,7 +17,7 @@ enum ColorProfile {
                 .toLowerCase(Locale.ROOT);
         if (colorTerm.contains("truecolor") || colorTerm.contains("24bit")) return TRUECOLOR;
         if (term.contains("256color")) return ANSI256;
-        if (term.equals("dumb") || term.isBlank()) return NONE;
+        if (term.equals("dumb") || term.trim().isEmpty()) return NONE;
         return ANSI16;
     }
 }
