@@ -25,13 +25,14 @@ final class Format {
     static String duration(double millis) {
         if (!Double.isFinite(millis) || millis < 0) return "n/a";
         Duration duration = Duration.ofMillis((long) millis);
-        long days = duration.toDays();
-        long hours = duration.toHoursPart();
-        long minutes = duration.toMinutesPart();
-        long seconds = duration.toSecondsPart();
-        if (days > 0) return "%dd %02dh".formatted(days, hours);
-        if (hours > 0) return "%dh %02dm".formatted(hours, minutes);
-        return "%dm %02ds".formatted(minutes, seconds);
+        long totalSeconds = duration.getSeconds();
+        long days = totalSeconds / 86_400;
+        long hours = (totalSeconds % 86_400) / 3_600;
+        long minutes = (totalSeconds % 3_600) / 60;
+        long seconds = totalSeconds % 60;
+        if (days > 0) return String.format(Locale.ROOT, "%dd %02dh", days, hours);
+        if (hours > 0) return String.format(Locale.ROOT, "%dh %02dm", hours, minutes);
+        return String.format(Locale.ROOT, "%dm %02ds", minutes, seconds);
     }
 
     static String number(double value) {
@@ -43,6 +44,12 @@ final class Format {
         int filled = (int) Math.round(width * fraction);
         char on = ascii ? '#' : '█';
         char off = ascii ? '.' : '░';
-        return Character.toString(on).repeat(filled) + Character.toString(off).repeat(Math.max(0, width - filled));
+        return repeat(on, filled) + repeat(off, Math.max(0, width - filled));
+    }
+
+    private static String repeat(char value, int count) {
+        StringBuilder result = new StringBuilder(Math.max(0, count));
+        for (int index = 0; index < count; index++) result.append(value);
+        return result.toString();
     }
 }
