@@ -3,6 +3,7 @@ package dev.lazyjvm.tui;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -11,12 +12,12 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class ChartTest {
     @Test
     void bucketsLongHistoryToVisibleWidth() {
-        assertEquals(List.of(1.5, 3.5), Chart.bucket(List.of(1.0, 2.0, 3.0, 4.0), 2));
+        assertEquals(Arrays.asList(1.5, 3.5), Chart.bucket(Arrays.asList(1.0, 2.0, 3.0, 4.0), 2));
     }
 
     @Test
     void preservesMissingSamplesAsVisibleGaps() {
-        var values = Chart.bucket(List.of(1.0, Double.NaN, 3.0, 4.0), 2);
+        List<Double> values = Chart.bucket(Arrays.asList(1.0, Double.NaN, 3.0, 4.0), 2);
         assertTrue(Double.isNaN(values.get(0)));
         assertEquals(3.5, values.get(1));
     }
@@ -25,8 +26,8 @@ class ChartTest {
     void timeSeriesIncludesAxesAndTimeLabelsWithoutFillingGaps() {
         Canvas canvas = new Canvas(48, 10, true);
         Chart.timeSeries(canvas, 0, 0, 48, 10,
-                List.of(new Chart.Series("cpu", List.of(10.0, Double.NaN, 30.0), Style.CYAN)),
-                List.of(Instant.ofEpochSecond(0), Instant.ofEpochSecond(1), Instant.ofEpochSecond(2)),
+                Arrays.asList(new Chart.Series("cpu", Arrays.asList(10.0, Double.NaN, 30.0), Style.CYAN)),
+                Arrays.asList(Instant.ofEpochSecond(0), Instant.ofEpochSecond(1), Instant.ofEpochSecond(2)),
                 0, 100, "%", true);
 
         String frame = canvas.render(false);
